@@ -1,7 +1,7 @@
 /* $Id$ */
 /**
  * Administration Menu.
- * 
+ *
  * Implementation of Sons of Suckerfish Dropdowns.
  * @see www.htmldog.com/articles/suckerfish
  **/
