@@ -6,8 +6,15 @@ Admin Menu x.x-x.x, xxxx-xx-xx
 
 Admin Menu 6.x-x.x, xxxx-xx-xx
 ------------------------------
+#268373 by sun: Added hook_update to cleanup for alpha/beta testers.
+#268373 by sun: Added menu callback to disable/enable developer modules.
 #132524 by pwolanin: Fixed admin_menu links are re-inserted each time menu links
   are rebuilt.
+by smk-ka: Performance: Use 'defer' attribute for JavaScript to delay execution.
+#266099 by sun: Fixed description of "Apply margin-top" configuration setting.
+#266308 by sun: Usability: Added Utility module features to collapse module
+  fieldsets on Modules page.
+#251341 by sun: Added docs about display drupal links permission.
 
 
 Admin Menu 6.x-1.0-BETA, 2008-06-08
@@ -26,7 +33,7 @@ Admin Menu 5.x-2.x, xxxx-xx-xx
 #246221 by sun: Fixed user counter displays different values than Who's online
   block.
 #239022 by mikl: Added Danish translation.
-#234444 by smk-ka: Fixed favicon issue for the "admin" menu.
+#234444 by smk-ka: Fixed admin_menu icon does not respect theme settings.
 #198240 by sun: Fixed admin_menu displayed in print output.
 
 
